--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <canvas id="myCanvas" width="620" height="350"></canvas>
     <div class="bottom">
         <button class="clear" id="clear">Clear</button>
-        <button class="download" id="download">Download</button>
+        <button class="download" id="download">Save & Download</button>
         <button class="retrieve" id="retrieve">Retrieve Saved Signature</button>
 
     </div>
