--- a/index.html
+++ b/index.html
@@ -279,6 +279,34 @@
                 link.click();
             })
 
+
+            canvas.addEventListener('touchend', (e) => {
+                e.preventDefault();
+                isDrawing = false;
+            });
+
+            canvasColor.addEventListener('change', (e) => {
+                ctx.fillStyle = e.target.value;
+                ctx.fillRect(0, 0, canvas.width, canvas.height);
+            });
+
+            fontSizePicker.addEventListener('change', (e) => {
+                ctx.lineWidth = e.target.value;
+            });
+
+            clearButton.addEventListener('click', () => {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+            });
+
+            saveButton.addEventListener('click', () => {
+                localStorage.setItem('canvasContents', canvas.toDataURL());
+
+                let link = document.createElement('a');
+                link.download = 'my-canvas.png';
+                link.href = canvas.toDataURL();
+                link.click();
+            });
+
             retrieveButton.addEventListener('click', () => {
                 let savedCanvas = localStorage.getItem('canvasContents');
 
