mobile screen changes

--- a/index.html
+++ b/index.html
@@ -244,7 +244,6 @@
                     ctx.moveTo(lastX, lastY);
                     ctx.lineTo(event.offsetX, event.offsetY);
                     ctx.stroke();
-
                     lastX = event.offsetX;
                     lastY = event.offsetY;
                 }
@@ -279,6 +278,31 @@
                 link.click();
             })
 
+            canvas.addEventListener('touchstart', (e) => {
+                e.preventDefault();
+                isDrawing = true;
+                const touch = e.touches[0];
+                const rect = canvas.getBoundingClientRect();
+                lastX = touch.clientX - rect.left;
+                lastY = touch.clientY - rect.top;
+            });
+
+            canvas.addEventListener('touchmove', (e) => {
+                e.preventDefault();
+                if (isDrawing) {
+                    const touch = e.touches[0];
+                    const rect = canvas.getBoundingClientRect();
+                    const offsetX = touch.clientX - rect.left;
+                    const offsetY = touch.clientY - rect.top;
+                    ctx.beginPath();
+                    ctx.moveTo(lastX, lastY);
+                    ctx.lineTo(offsetX, offsetY);
+                    ctx.stroke();
+                    lastX = offsetX;
+                    lastY = offsetY;
+                }
+            });
+            
 
             canvas.addEventListener('touchend', (e) => {
                 e.preventDefault();
@@ -292,19 +316,6 @@
 
             fontSizePicker.addEventListener('change', (e) => {
                 ctx.lineWidth = e.target.value;
-            });
-
-            clearButton.addEventListener('click', () => {
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-            });
-
-            saveButton.addEventListener('click', () => {
-                localStorage.setItem('canvasContents', canvas.toDataURL());
-
-                let link = document.createElement('a');
-                link.download = 'my-canvas.png';
-                link.href = canvas.toDataURL();
-                link.click();
             });
 
             retrieveButton.addEventListener('click', () => {
